<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.wallet.WalletFragment">

    <TextView
        android:id="@+id/sign_in_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_margin="8dp"
        android:text="@string/sign_in_text"
        android:textColor="@color/sailor_blue"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/sailor_blue"
        android:fontFamily="@font/fira_sans_semibold"
        android:text="@string/sign_in"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_text" />

    <androidx.cardview.widget.CardView
        android:id="@+id/wallet_balance_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:backgroundTint="@color/sailor_blue"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/cardholderName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="35dp"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="Anietie Udoaka" />

        <TextView
            android:id="@+id/card_balance_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="75dp"
            android:layout_marginBottom="35dp"
            android:fontFamily="@font/ubuntu"
            android:text="@string/wallet_balance"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/cardBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="35dp"
            android:fontFamily="@font/fira_sans_semibold"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:text="$500" />

        <TextView
            android:id="@+id/cardNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="250dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/fira_sans_semibold"
            android:text="10001"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/cardIcon"
            android:layout_width="65dp"
            android:layout_height="21dp"
            android:layout_gravity="end"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="35dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_visa" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/buy_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/island_green"
        android:fontFamily="@font/fira_sans_semibold"
        android:text="@string/buy_text"
        android:textSize="18sp"
        android:textColor="@color/sailor_blue"
        app:layout_constraintStart_toStartOf="@+id/wallet_balance_cardView"
        app:layout_constraintTop_toBottomOf="@+id/wallet_balance_cardView" />

    <Button
        android:id="@+id/sell_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/island_green"
        android:fontFamily="@font/fira_sans_semibold"
        android:text="@string/sell_text"
        android:textSize="18sp"
        android:textColor="@color/sailor_blue"
        app:layout_constraintEnd_toEndOf="@+id/wallet_balance_cardView"
        app:layout_constraintTop_toBottomOf="@+id/wallet_balance_cardView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/bitcoin_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/sailor_blue"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buy_button">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/ubuntu"
            android:padding="16dp"
            android:text="Bitcoin: "
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:padding="16dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:text="0.0001" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/ethereum_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/sailor_blue"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bitcoin_cardView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/ubuntu"
            android:padding="16dp"
            android:text="Ethereum: "
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:padding="16dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:text="0.0001" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/ripple_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/sailor_blue"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ethereum_cardView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/ubuntu"
            android:padding="16dp"
            android:text="Ripple: "
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:padding="16dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:text="0.0001" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/dogecoin_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/sailor_blue"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ripple_cardView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/ubuntu"
            android:padding="16dp"
            android:text="Dogecoin: "
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:padding="16dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:text="0.0001" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/litecoin_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/sailor_blue"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dogecoin_cardView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/ubuntu"
            android:padding="16dp"
            android:text="Litecoin: "
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:padding="16dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:text="0.0001" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/dash_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/sailor_blue"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/litecoin_cardView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/ubuntu"
            android:padding="16dp"
            android:text="@string/amount_dash"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:padding="16dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:text="0.0001" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>